--- a/references.bib
+++ b/references.bib
@@ -47,7 +47,6 @@
 	isbn = {0035-9009},
 	issn = {00359009},
 	journal = {Quart. J. Roy. Meteor. Soc.},
-	keywords = {Data assimilation,Ensemble Kalman Filter,Sea-level pressure,State estimation,Surface pressure},
 	month = {jan},
 	number = {654},
 	pages = {1--28},
@@ -61,7 +60,6 @@
 	doi = {10.1175/JCLI-D-15-0556.1},
 	issn = {08948755},
 	journal = {J. Climate},
-	keywords = {Data assimilation,Interannual variability,Models and modeling,Reanalysis data,Variability},
 	number = {11},
 	pages = {4083--4097},
 	title = {{ERA-20C: An atmospheric reanalysis of the twentieth century}},
@@ -73,7 +71,6 @@
 	doi = {10.1029/2018MS001273},
 	issn = {19422466},
 	journal = {J. Adv. Model. Earth Syst.},
-	keywords = {Climate reanalysis,Coupled assimilation,Earth system model},
 	pages = {1172--1195},
 	title = {{CERA-20C: A Coupled Reanalysis of the Twentieth Century}},
 	year = {2018}
@@ -81,17 +78,13 @@
 @article{Horton2018b,
 	author = {Horton, Pascal and Br{\"{o}}nnimann, Stefan},
 	doi = {10.1007/s00382-018-4442-6},
-	file = {:D$\backslash$:/{\_}Storage/Mendeley/Horton, Br{\"{o}}nnimann - 2019.pdf:pdf;:D$\backslash$:/{\_}Storage/Mendeley/Horton, Br{\"{o}}nnimann - 2019(2).pdf:pdf},
 	isbn = {0038201844},
 	issn = {0930-7575},
 	journal = {Climate Dynamics},
-	keywords = {Analogue method,Precipitation,Reanalyses,Statistical downscaling,analogue method,precipitation,reanalyses,statistical downscaling},
-	mendeley-groups = {{\_}For{\_}articles/2019{\_}GMD{\_}atmoswing},
 	number = {9-10},
 	pages = {5189--5211},
 	publisher = {Springer Berlin Heidelberg},
 	title = {{Impact of global atmospheric reanalyses on statistical precipitation downscaling}},
-	url = {http://link.springer.com/10.1007/s00382-018-4442-6},
 	volume = {52},
 	year = {2019}
 }
@@ -153,7 +146,6 @@
 	doi = {10.2151/jmsj.2015-001},
 	issn = {0026-1165},
 	journal = {J. Meteor. Soc. Japan. Ser. II},
-	keywords = {data assimilation,japan meteo-,meteorological observation,numerical weather prediction,ote-machi,reanalysis,rological agency,shinya kobayashi,tokyo},
 	number = {1},
 	pages = {5--48},
 	title = {{The JRA-55 Reanalysis: General Specifications and Basic Characteristics}},
@@ -165,7 +157,6 @@
 	doi = {10.2151/jmsj. 2016-015 J-STAGE},
 	issn = {0849-6757},
 	journal = {J. Meteor. Soc. Japan},
-	keywords = {atmospheric circulation,climate variability,reanalysis,verification},
 	number = {3},
 	pages = {269--302},
 	title = {{The JRA-55 Reanalysis: Representation of atmospheric circulation and climate variability}},
@@ -188,7 +179,6 @@
 	doi = {10.1175/JCLI-D-16-0758.1},
 	issn = {08948755},
 	journal = {J. Climate},
-	keywords = {Aerosols,Data assimilation,Numerical analysis/modeling,Reanalysis data,Satellite observations},
 	number = {14},
 	pages = {5419--5454},
 	title = {{The modern-era retrospective analysis for research and applications, version 2 (MERRA-2)}},
@@ -223,7 +213,6 @@
     author = {Hersbach, Hans and Bell, Bill and Berrisford, Paul and Hor{\'{a}}nyi, Andr{\'{a}}s and Sabater, Joaqu{\'{i}}n Mu{\~{n}}oz and Nicolas, Julien and Radu, Raluca and Schepers, Dinand and Simmons, Adrian and Soci, Cornel and Dee, Dick},
     doi = {10.21957/vf291hehd7},
     journal = {ECMWF Newsletter},
-    mendeley-groups = {Meteorology / Climate/Datasets},
     number = {159},
     pages = {17--24},
     title = {{Global reanalysis: goodbye ERA-Interim, hello ERA5}},
@@ -273,8 +262,6 @@
 	doi = {10.5194/hess-19-2717-2015},
 	issn = {16077938},
 	journal = {Hydrology and Earth System Sciences},
-	keywords = {2 read now},
-	mendeley-tags = {2 read now},
 	number = {6},
 	pages = {2717--2736},
 	title = {{Building long-term and high spatio-temporal resolution precipitation and air temperature reanalyses by mixing local observations and global atmospheric reanalyses: The ANATEM model}},
@@ -296,11 +283,9 @@
 	doi = {10.5194/cp-2016-5},
 	issn = {1814-9359},
 	journal = {Climate of the Past},
-	keywords = {2 read immediately},
 	number = {9},
 	pages = {1785--1804},
 	title = {{Streamflow variability over the 1881–2011 period in northern Qu{\'{e}}bec: comparison of hydrological reconstructions based on tree rings and geopotential height field reanalysis}},
-	url = {http://www.clim-past-discuss.net/cp-2016-5/},
 	volume = {12},
 	year = {2016}
 }
@@ -309,10 +294,8 @@
 	doi = {10.1002/2017WR020596},
 	issn = {00431397},
 	journal = {Water Resources Research},
-	mendeley-tags = {2 read now},
 	pages = {1--17},
 	title = {{20th-Century Hydro-Meteorological Reconstructions to Study the Multidecadal Variations of the Water Cycle Over France}},
-	url = {http://doi.wiley.com/10.1002/2017WR020596},
 	volume = {53},
 	year = {2017}
 }
@@ -322,10 +305,8 @@
 	isbn = {0930-7575},
 	issn = {09307575},
 	journal = {Climate Dynamics},
-	keywords = {2 read now},
 	pages = {807--823},
 	title = {{An estimate of future climate change for western France using a statistical downscaling technique}},
-	url = {http://www.springerlink.com/content/940EKRKKEAAXFGR5},
 	volume = {20},
 	year = {2003}
 }
@@ -334,12 +315,10 @@
 	doi = {10.1016/j.jhydrol.2004.09.008},
 	issn = {00221694},
 	journal = {Journal of Hydrology},
-	keywords = {analogue method,downscaling,pca,precipitation,sweden,teweles-wobus score},
 	month = {may},
 	number = {1-4},
 	pages = {174--190},
 	title = {{Statistical precipitation downscaling in central Sweden with the analogue method}},
-	url = {http://linkinghub.elsevier.com/retrieve/pii/S0022169404004275},
 	volume = {306},
 	year = {2005}
 }
@@ -351,7 +330,6 @@
 	month = {apr},
 	pages = {313--319},
 	title = {{Application of the MM5 and the analogous method to heavy rainfall event, the case of 16 - 18 October 2003 in Catalonia (NE Spain)}},
-	url = {http://www.adv-geosci.net/7/313/2006/},
 	volume = {7},
 	year = {2006}
 }
@@ -360,10 +338,8 @@
 	doi = {10.5194/adgeo-12-121-2007},
 	issn = {1680-7359},
 	journal = {Advances in Geosciences},
-	keywords = {2 read now},
 	pages = {121--126},
 	title = {{Heavy rain prediction using deterministic and probabilistic models – the flash flood cases of 11 - 13 October 2005 in Catalonia ( NE Spain )}},
-	url = {http://www.adv-geosci.net/12/121/2007/},
 	volume = {12},
 	year = {2007}
 }
@@ -389,7 +365,6 @@
 	number = {2-3},
 	pages = {133--144},
 	title = {{Influence of similarity measures on the performance of the analog method for downscaling daily precipitation}},
-	url = {http://link.springer.com/10.1007/s00382-007-0277-2},
 	volume = {30},
 	year = {2007}
 }
@@ -402,7 +377,6 @@
 	number = {2},
 	pages = {263--269},
 	title = {{Probabilistic forecast of daily areal precipitation focusing on extreme events}},
-	url = {http://www.nat-hazards-earth-syst-sci.net/7/263/2007/},
 	volume = {7},
 	year = {2007}
 }
@@ -427,7 +401,6 @@
 	number = {2},
 	pages = {W02024},
 	title = {{Statistical downscaling using K -nearest neighbors}},
-	url = {http://doi.wiley.com/10.1029/2004WR003444},
 	volume = {41},
 	year = {2005}
 }
@@ -436,7 +409,6 @@
 	doi = {10.1051/lhb/2009079},
 	issn = {0018-6368},
 	journal = {La Houille Blanche},
-	keywords = {2 extract references},
 	month = {jan},
 	number = {6},
 	pages = {60--65},
@@ -449,11 +421,9 @@
 	isbn = {0169-8095},
 	issn = {01698095},
 	journal = {Atmospheric Research},
-	keywords = {2 read soon,Climate model,Ensemble forecast,K-Nearest neighbors,Seasonal prediction,Southeastern Mediterranean,Statistical downscaling},
 	pages = {346--356},
 	publisher = {Elsevier B.V.},
 	title = {{Statistical downscaling of climate forecast system seasonal predictions for the Southeastern Mediterranean}},
-	url = {http://dx.doi.org/10.1016/j.atmosres.2012.07.019},
 	volume = {118},
 	year = {2012}
 }
@@ -478,7 +448,6 @@
 	pages = {111--125},
 	publisher = {Elsevier B.V.},
 	title = {{Assessment of an analogue downscaling method for modelling climate change impacts on runoff}},
-	url = {http://dx.doi.org/10.1016/j.jhydrol.2012.09.024},
 	volume = {472-473},
 	year = {2012}
 }
@@ -511,7 +480,6 @@
 	number = {612},
 	pages = {2961--3012},
 	title = {{The ERA-40 re-analysis}},
-	url = {http://doi.wiley.com/10.1256/qj.04.176},
 	volume = {131},
 	year = {2005}
 }
@@ -524,7 +492,6 @@
 	pages = {193--205},
 	publisher = {Elsevier B.V.},
 	title = {{Statistical precipitation downscaling for small-scale hydrological impact investigations of climate change}},
-	url = {http://dx.doi.org/10.1016/j.jhydrol.2011.02.030},
 	volume = {402},
 	year = {2011}
 }
@@ -584,7 +551,6 @@
 	pages = {39--56},
 	publisher = {Elsevier B.V.},
 	title = {{Probabilistic and deterministic results of the ANPAF analog model for Spanish wind field estimations}},
-	url = {http://dx.doi.org/10.1016/j.atmosres.2012.01.011},
 	volume = {108},
 	year = {2012}
 }
@@ -618,7 +584,6 @@
 	pages = {46--63},
 	publisher = {Elsevier B.V.},
 	title = {{Precipitation projections for Spain by means of a weather typing statistical method}},
-	url = {http://dx.doi.org/10.1016/j.gloplacha.2013.08.001},
 	volume = {109},
 	year = {2013}
 }
@@ -641,7 +606,6 @@
 	pages = {238--249},
 	publisher = {Elsevier B.V.},
 	title = {{Analysis of wind power productions by means of an analog model}},
-	url = {http://dx.doi.org/10.1016/j.atmosres.2014.02.012},
 	volume = {143},
 	year = {2014}
 }
@@ -650,7 +614,6 @@
 	doi = {10.1175/JCLI-D-13-00464.1},
 	issn = {0894-8755},
 	journal = {Journal of Climate},
-	keywords = {2 read now},
 	month = {jul},
 	number = {13},
 	pages = {5056--5074},
@@ -664,7 +627,6 @@
 	issn = {08998418},
 	journal = {International Journal of Climatology},
 	title = {{Atmospheric analogues for physically consistent scenarios of surface weather in Europe and Maghreb}},
-	url = {http://doi.wiley.com/10.1002/joc.4844},
 	year = {2016}
 }
 @article{Vanvyve2015,
@@ -683,7 +645,6 @@
 	doi = {10.1002/2014JD022236},
 	issn = {2169897X},
 	journal = {Journal of Geophysical Research: Atmospheres},
-	keywords = {2 read now},
 	month = {feb},
 	number = {3},
 	pages = {1023--1043},
@@ -700,9 +661,41 @@
 	number = {1},
 	pages = {1--18},
 	title = {{Sensitivity of the Statistical DownScaling Model (SDSM) to reanalysis products}},
-	url = {http://dx.doi.org/10.3137/AO924.2009{\%}5Cnhttp://www.tandfonline.com/doi/abs/10.3137/AO924.2009},
 	volume = {47},
 	year = {2009}
+}
+@article{Teweles1954,
+	author = {Teweles, S and Wobus, H B},
+	file = {:D$\backslash$:/{\_}Storage/Mendeley/Teweles, Wobus - 1954.pdf:pdf},
+	journal = {Bulletin of the American Meteorological Society},
+	pages = {455--463},
+	title = {{Verification of prognostic charts}},
+	volume = {35},
+	year = {1954}
+}
+@incollection{Brown2012,
+	author = {Brown, Barbara G. and Gilleland, Eric and Ebert, Elizabeth E.},
+	booktitle = {Forecast Verification},
+	chapter = {6},
+	doi = {10.1002/9781119960003.ch6},
+	editor = {Jolliffe, Ian T. and Stephenson, David B.},
+	isbn = {9781119960003},
+	pages = {95--117},
+	publisher = {Wiley},
+	title = {{Forecasts of Spatial Fields}},
+	year = {2012}
+}
+@article{Horton2017a,
+	author = {Horton, Pascal and Jaboyedoff, Michel and Obled, Charles},
+	doi = {10.1175/MWR-D-16-0093.1},
+	issn = {0027-0644},
+	journal = {Monthly Weather Review},
+	month = {apr},
+	number = {4},
+	pages = {1275--1294},
+	title = {{Global Optimization of an Analog Method by Means of Genetic Algorithms}},
+	volume = {145},
+	year = {2017}
 }
 
 
