--- a/references.bib
+++ b/references.bib
@@ -697,6 +697,55 @@
 	volume = {145},
 	year = {2017}
 }
-
-
+@article{Horton2019,
+	author = {Horton, Pascal},
+	doi = {10.5194/gmd-12-2915-2019},
+	issn = {19919603},
+	journal = {Geoscientific Model Development},
+	number = {7},
+	pages = {2915--2940},
+	title = {{AtmoSwing: Analog Technique Model for Statistical Weather forecastING and downscalING (v2.1.0)}},
+	volume = {12},
+	year = {2019}
+}
+@techreport{Brown1974,
+	author = {Brown, TA},
+	pages = {P--5235},
+	title = {{Admissible Scoring Systems for Continuous Distributions.}},
+	url = {http://eric.ed.gov/?id=ED135799},
+	year = {1974}
+}
+@article{Matheson1976,
+	author = {Matheson, JE and Winkler, RL},
+	doi = {10.1287/mnsc.22.10.1087},
+	journal = {Management science},
+	number = {10},
+	pages = {1087--1096},
+	title = {{Scoring rules for continuous probability distributions}},
+	volume = {22},
+	year = {1976}
+}
+@article{Hersbach2000,
+	author = {Hersbach, H.},
+	doi = {10.1175/1520-0434(2000)015<0559:dotcrp>2.0.co;2},
+	journal = {Weather and Forecasting},
+	number = {5},
+	pages = {559--570},
+	title = {{Decomposition of the continuous ranked probability score for ensemble prediction systems}},
+	volume = {15},
+	year = {2000}
+}
+@article{Bradley2011,
+	author = {Bradley, A Allen and Schwartz, Stuart S.},
+	doi = {10.1175/2010MWR3305.1},
+	isbn = {0027-0644},
+	issn = {0027-0644},
+	journal = {Monthly Weather Review},
+	keywords = {2 read soon},
+	number = {9},
+	pages = {3075--3089},
+	title = {{Summary Verification Measures and Their Interpretation for Ensemble Forecasts}},
+	volume = {139},
+	year = {2011}
+}
 
