--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@ The present work aims at comparing ERA5 \citep{Hersbach2019} to other global rea
 
 The other reanalyses are full-input products as they assimilate all available data, including satellite data \citep{Fujiwara2017}. The NCEP/NCAR Reanalysis I \citep[NR-1 --][]{Kalnay1996, Kistler2001} was the first global reanalysis, followed by the NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} that fixed some identified problems. The Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} is the most recent reanalysis by NCEP. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} is produced by the Japan Meteorological Agency (JMA). Its version using conventional data only, JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, was not considered in this work as it provides similar results as JRA-55 \citep{Horton2018b}. NASA's Global Modeling and Assimilation Office (GMAO) released the Modern-Era Retrospective Analysis for Research and Applications, version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, which is an improvement of the first MERRA reanalysis \citep{Rienecker2011}. Finally, the predecessor of ERA5, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, was also considered.
 
-ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It profits from multiple improvements to the Integrating Forecasting System (IFS), in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs, with higher temporal (hourly) and spatial (31~km) resolutions. The use of a 10-member ensemble of data assimilations at a lower spatial and temporal resolution allows providing an estimate of the uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as ground-based radar and new satellite sensors, and uses improved observation operators, which allows to better compare model outputs and observations. Additionally, it indirectly profits from improvements of historical observations, both for conventional and satellite data \citep{Hersbach2019}. ERA5 is also more appropriate for climate analyses as it relies on suitable radiative forcing and boundary conditions (e.g. changes in greenhouse gases, aerosols, SST, and sea ice).
+ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It profits from multiple improvements to the Integrating Forecasting System (IFS), in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs, with higher temporal (hourly) and spatial (0.28\degree; 31~km) resolutions. The use of a 10-member ensemble of data assimilations at a lower spatial and temporal resolution allows providing an estimate of the uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as ground-based radar and new satellite sensors, and uses improved observation operators, which allows to better compare model outputs and observations. Additionally, it indirectly profits from improvements of historical observations, both for conventional and satellite data \citep{Hersbach2019}. ERA5 is also more appropriate for climate analyses as it relies on suitable radiative forcing and boundary conditions (e.g. changes in greenhouse gases, aerosols, SST, and sea ice).
 
 
 \begin{table}[bt]
@@ -103,7 +103,7 @@ ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It profits from multi
 		%\textbf{JRA-55C}  & JMA & 1958 -- 2015 & 1.25\degree x 1.25\degree & TL319 ($\sim$0.36\degree), L60 & 2009 & conventional  & 4D-Var\\
 		\textbf{MERRA-2} & NASA GMAO & 1980 -- present & 0.625\degree x 0.5\degree & 0.625\degree x 0.5\degree, L72, 2014 & full  & 3D-Var\\
 		\textbf{ERA-INT} & ECMWF & 1979 -- 2017 & 0.75\degree x 0.75\degree & TL255 ($\sim$0.70\degree), L60, 2006 & full  & 4D-Var\\
-		\textbf{ERA5} & ECMWF & 1950* -- present & 0.25\degree x 0.25\degree & T639 ($\sim$31~km), L137, 2016 & full  & 4D-Var\\
+		\textbf{ERA5} & ECMWF & 1950* -- present & 0.25\degree x 0.25\degree & T639 ($\sim$0.28\degree), L137, 2016 & full  & 4D-Var\\
 		\hline 
 	\end{tabular} 
 
@@ -212,7 +212,7 @@ The CRPS \citep[Continuous Ranked Probability Score,][]{Brown1974, Matheson1976,
 \end{equation}
 where $CRPS_{clim}$ is the CRPS value for the climatological distribution. A better prediction is characterized by an increase in CRPSS.
 
-The methods were here calibrated using the semi-automatic sequential procedure developed by \citet{Bontron2004} and also used in \citet{Radanovics2013} and \citet{BenDaoud2016}. A detailed description can also be found in \citet{Horton2019}. It allows the calibration of the spatial windows on which the predictors are compared (specific to each level of analogy) and of the number of analog dates to select at the different levels of analogy. The AtmoSwing software \citep{Horton2019} was used to perform this calibration independently for every station, method, and reanalysis. The calculations were performed on a HPC cluster at the University of Bern.
+The methods were here calibrated using the semi-automatic sequential procedure developed by \citet{Bontron2004} and also used in \citet{Radanovics2013} and \citet{BenDaoud2016}. A detailed description can also be found in \citet{Horton2019}. It allows the calibration of the spatial windows on which the predictors are compared (specific to each level of analogy) and of the number of analog dates to select at the different levels of analogy. The AtmoSwing software \citep{Horton2019} was used to perform this calibration independently for every station, method, and reanalysis. The calculations were performed on a HPC cluster at the University of Bern. 
 
 After the initial calibration of all AMs for ERA5, some issues were identified due to the presence of local minimas for the spatial windows in the high resolution grid. The procedure was then restarted using an improvement of the semi-automatic procedure, named classic+ \citep{Horton2019}, which allows additional moves in the calibration of the spatial windows and thus allows escaping local minimas. This issue is presented and discussed in section \ref{sec:results_hires}.
 
@@ -220,8 +220,15 @@ After the initial calibration of all AMs for ERA5, some issues were identified d
 \section{Results}
 \label{sec:results}
 
+The results are provided for the VP (independent validation period, section \ref{sec:precipitation}). All reanalyses were used at their highest available spatial resolution and at a 6-hrly time step. The impact of the spatial resolution is analyzed in section \ref{sec:results_hires}.
+
 \subsection{Impact on the skill}
 \label{sec:results_skill}
+
+The skill score of the different methods and reanalyses are shown in Fig. \ref{fig:comparison_values}. As discussed in \citet{Horton2018b}, there are clear differences between methods, with more complex AMs generally performing better, and also between reanalyses, in favour of modern full-input reanalyses. One can see here that ERA5 is systematically in the best performing reanalyses. When isolating the impact of the reanalysis by removing the influence of the methods and the stations (Fig. \ref{fig:comparison_relative}), the positive contribution of ERA5 to the skill score is even more clear, with the highest difference for the method PT-2Z-4MI. One can also see a clear improvement compared to ERA-INT.
+
+ERA5 was selected as the best reanalysis from a minimum of 34.9\% of the stations for 4Z to a maximum of 78.7\% for PT-2Z-4MI, with an average of about 50\%. When considering the first two ranks, ERA5 was selected from a minimum of 61.8\% of the stations for PT-2Z-4W-4MI to a maximum of 91.7\% for PT-2Z-4MI, with an average of 75\%. There was no specific spatial patterns with respect to which stations performed best with ERA5, such as it was the case with other reanalyses in \citet{Horton2018b}. Also, ERA-INT was not systematically superseded by ERA5, and ERA-INT remained the best choice for some stations and methods. It is thus important to undertake such a comparison on different AMs and multiple stations.
+
 
 \begin{figure}[bt]
     \centering
@@ -233,27 +240,42 @@ After the initial calibration of all AMs for ERA5, some issues were identified d
 \begin{figure}[bt]
     \centering
     \includegraphics[width=\textwidth]{figures/boxplot-per-method-diff.pdf}
-    \caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and per method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
+    \caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and per method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. \ref{fig:comparison_values}.}
     \label{fig:comparison_relative}
 \end{figure}
 
-%TODO: coeff correl?
-%TODO: biases
 
 \subsection{High resolution and its pitfalls}
 \label{sec:results_hires}
 
+Although the calibrations have been made on a HPC cluster, they ended up to be highly time consuming when using the semi-automatic sequential procedure (classic calibration). The reason being that the process involve first the calculation of a relevance map for each level of analogy, which requires an assessment of every unitary cell of the predictor grid. Then, the spatial window in growing by assessing an extension in every four dimensions and by applying the one with the highest gain. On a high resolution grid, these procedures imply numerous assessments.
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=80mm]{figures/boxplot-resol.pdf}
-	\caption{....}
+	\includegraphics[width=80mm]{figures/boxplot-resol-diff.pdf}
+	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as the failed calibration of AMs with ERA5. The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. \ref{fig:comparison_relative}.}
 	\label{fig:resolution}
 \end{figure}
+
+When all calibrations were done, the results showed that ERA5 was performing more poorly than ERA-INT (grayed bars in Fig. \ref{fig:resolution}). An investigation of these results showed that the spatial windows did not grow as much as expected and were non optimal. The reason being that the classic calibration got stuck in local minimas during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the very high resolution of ERA5 that can create local minimas that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial window, including increases of multiple grid points at once to get out of local minimas. The classic+ calibration also ended up to be faster due to its ability to not assess every point of the grid in the calculation of the relevance map. With the advent of high resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets.
+
+\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses has generally no significant impact on the performance of AMs. ERA5 has the highest spatial resolution among global reanalyses. As the results in Sect. \ref{sec:results_skill} were obtained using the full spatial resolution (0.25\degree), an additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution in the gain relatively to ERA-INT. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution does not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. The gains are likely due to improvements in the forecast model, the assimilation scheme and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as the lightning activity, the output spatial resolution does matter (unpublished results).
 
 
 \subsection{Shared analog dates}
 \label{sec:results_shared_dates}
+
+The use of predictors from different datasets, and of distinct spatial windows, result in a different selection of analog dates. The percentage of identical analogue dates for the different AMs over the VP is shown in Fig. \ref{fig:shared-dates}. This percentage decreases with the complexity of the AM, and range from a maximum of 74\% between NR-1 and NR-2 for the 2Z method to a minimum of 10\% between MERRA-2 and 20CR-2c for the PT-2Z-4W-4MI method. It is likely that if all reanalyses were compared over the same spatial windows, these numbers would be higher.
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=120mm]{figures/similar-dates.pdf}
+	\caption{Percentage of identical analogue dates selected when using the reanalysis datasets in columns that are also found when using the datasets in rows for different AMs. The values are averaged for all stations on the VP.}
+	\label{fig:shared-dates}
+\end{figure}
+
+As it could be expected, ERA5 shared some similarities in the selection of analog dates with ERA-INT, but not in an order of magnitude that is really different from the other modern full-input reanalyses. Indeed, the percentage of shared analog dates is of the same order of magnitude as with CFSR and JRA-55, which are the two reanalyses produced by models with higher spatial resolution (Table \ref{table:datasets}), but fewer vertical levels. It is worth noting that JRA-55, which presents here strong similarities with ERA5 in terms of selected analog dates for Switzerland, has an output resolution that is five times lower (1.25\degree). 
+
 
 \section{Conclusions}
 \label{sec:conclusions}
